[project]
name = "doom-frequency-relayer"
version = "0.1.0"
authors = [{ name = "Victor Lopez", email = "vhrlopes@gmail.com" }]
description = "DoomFrequency communication relayer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "watchdog>=6.0.0", "websockets>=16.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/codx-dev/doom-frequency-mod"

[project.scripts]
doom-frequency-relayer = "doom_frequency_relayer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doom_frequency_relayer"]

[dependency-groups]
dev = [
  "hatchling>=1.29.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
